+ change password done

--- a/src/gui/MainFrame.form
+++ b/src/gui/MainFrame.form
@@ -1355,6 +1355,9 @@
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Submit"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSubmitPassActionPerformed"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
