--- a/src/gui/MainFrame.form
+++ b/src/gui/MainFrame.form
@@ -7,6 +7,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Personal Finanace System"/>
     <Property name="name" type="java.lang.String" value="mainFrame" noResource="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
